feat: refactor API to enforce nice division between two halves
